--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -1,3 +1,8 @@
 .jumbotron {
   padding: 100px;
+  background-image: url("Books.jpg");
+  margin: 18%;
+  margin-bottom: 0%;
+  color:aliceblue;
 }
+ 
